2011-06-23  Robert Larice
 * src/xspice/mif/mifgetvalue.c :
   tiny rewrite, round to nearest integer and reset errno for strtol()

2011-06-23 Holger Vogt
 * /xspice/icm/analog/modpath.lst,
   /xspice/icm/analog/file_source/cfunc.mod,
   /xspice/icm/analog/file_source/ifspec.ifs:
   code model with input from file added (T. Sailer)
   example/xspice/fstest.sp, sine.m: test of 'filesource'
 * inpcom.c: bug no. 3317928, patched by Robert  

2011-06-23  Robert Larice
 * src/frontend/options.c ,
 * src/frontend/spiceif.c ,
 * src/frontend/variable.c :
   round to nearest integer, `rawfileprec' `numdgt' `history' if_option() doset()

2011-06-23  Robert Larice
 * src/frontend/evaluate.c :
   `[]' indexing operator, round index to nearest integer

2011-06-23  Robert Larice
 * src/xspice/icm/spice2poly/icm_spice2poly/cfunc.mod :
   malloc return value cast

2011-06-23  Robert Larice
 * src/ciderlib/oned/onemesh.c ,
 * src/spicelib/devices/nbjt/nbjttemp.c :
   tiny rewrite, (integer + integer)/2

2011-06-23  Robert Larice
 * src/frontend/evaluate.c ,
 * src/misc/hash.c ,
 * src/spicelib/devices/ltra/ltraset.c ,
 * src/xspice/evt/evtdump.c :
   function pointer invocation, (*p)(...)  --->  p(...)

2011-06-23  Robert Larice
 * src/main.c :
   tiny fix, reoccuring option `h' in the getopt_long() option string

2011-06-23  Robert Larice
 * src/frontend/com_sysinfo.c :
   tiny rewrite, typefix, don't compare EOF with a char

2011-06-23 Holger Vogt
 * measure.c: another try to obtain correct vector handling

2011-06-22  Robert Larice
 * src/ngsconvert.c ,
 * src/frontend/outitf.c ,
 * src/frontend/rawfile.c ,
 * src/frontend/help/readhelp.c ,
 * src/misc/dstring.c ,
 * src/misc/hash.c :
   remove some useless casts

2011-06-22  Robert Larice
 * src/spicelib/devices/bsim4/b4geo.c ,
 * src/spicelib/devices/bsim4/b4noi.c ,
 * src/spicelib/devices/bsim4/b4temp.c :
   cleanup bsim4 prototypes

2011-06-22  Robert Larice
 * src/frontend/commands.c ,
 * src/frontend/misccoms.h ,