@@ -1,3 +1,7 @@
+2011-06-24  Robert Larice
+ * src/frontend/com_sysinfo.c :
+   tiny rewrite, swallow type conversion warnings
+
 2011-06-23  Robert Larice
  * src/xspice/mif/mifgetvalue.c :
    tiny rewrite, round to nearest integer and reset errno for strtol()
@@ -8,7 +12,7 @@
    /xspice/icm/analog/file_source/ifspec.ifs:
    code model with input from file added (T. Sailer)
    example/xspice/fstest.sp, sine.m: test of 'filesource'
- * inpcom.c: bug no. 3317928, patched by Robert  
+ * inpcom.c: bug no. 3317928, patched by Robert
 
 2011-06-23  Robert Larice
  * src/frontend/options.c ,
